Add .gitignore, upgrade boilerplate for NPM 5.0.3, start Webpack config

--- a/package.json
+++ b/package.json
@@ -26,4 +26,8 @@
     "url": "https://github.com/rmatych/Modern-Webapp"
   },
   "license": "MIT",
+  "devDependencies": {
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
+  }
 }
