--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "A configuration boilerplate for a modern frontend SPA workflow.",
   "scripts": {
-    "build:dev": "webpack --env=dev --progress --profile --colors",
-    "build:dist": "webpack --env=prod --progress --profile --colors"
+    "build:dev": "webpack --env=dev --progress --colors",
+    "build:dist": "webpack --env=prod --progress --colors"
   },
   "keywords": [
     "react",
@@ -17,7 +17,7 @@
     "babel",
     "eslint",
     "stylelint",
-    "react toolbox",
+    "Semantic UI",
     "material"
   ],
   "author": {
@@ -30,6 +30,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^4.0.0",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-json": "^1.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-optimize-regex": "^1.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-merge": "^4.1.0"
