--- a/package.json
+++ b/package.json
@@ -31,17 +31,22 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^4.0.0",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-optimize-regex": "^1.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.14.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "webpack-merge": "^4.1.0"
+    "babel-core": "6.25.0",
+    "babel-loader": "7.1.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "eslint": "4.1.0",
+    "eslint-loader": "1.8.0",
+    "eslint-plugin-import": "2.6.0",
+    "eslint-plugin-json": "1.2.0",
+    "eslint-plugin-jsx-a11y": "5.0.3",
+    "eslint-plugin-optimize-regex": "1.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "html-webpack-plugin": "2.29.0",
+    "husky": "0.14.1",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "2.5.0",
+    "webpack-merge": "4.1.0"
   }
 }
