--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "babel-core": "6.25.0",
     "babel-loader": "7.1.0",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-env": "1.5.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "eslint": "4.1.0",
