--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-optimize-regex": "1.1.1",
     "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "2.29.0",
     "husky": "0.14.1",
     "postcss": "^6.0.4",
