--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
+    "preact": "^8.1.0",
+    "preact-compat": "^3.16.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
