--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "webpack",
     "babel",
     "eslint",
-    "stylelint",
-    "Semantic UI"
+    "Bulma"
   ],
   "author": {
     "name": "Robert Matych",
@@ -38,9 +37,9 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "browserslist": "^2.1.5",
-    "css-loader": "^0.28.4",
-    "cssnano": "^3.10.0",
+    "browserslist": "2.1.5",
+    "css-loader": "0.28.4",
+    "cssnano": "3.10.0",
     "eslint": "4.1.0",
     "eslint-loader": "1.8.0",
     "eslint-plugin-import": "2.6.0",
@@ -48,24 +47,28 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-optimize-regex": "1.1.1",
     "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "0.11.2",
     "html-webpack-plugin": "2.29.0",
     "husky": "0.14.1",
-    "postcss": "^6.0.4",
-    "postcss-css-reset": "^1.0.2",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.6",
-    "precss": "^2.0.0",
-    "style-loader": "^0.18.2",
+    "image-webpack-loader": "3.3.1",
+    "node-sass": "^4.5.3",
+    "postcss": "6.0.4",
+    "postcss-import": "10.0.0",
+    "postcss-loader": "2.0.6",
+    "precss": "2.0.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "0.18.2",
     "webpack": "3.0.0",
     "webpack-dev-server": "2.5.0",
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
-    "preact": "^8.1.0",
-    "preact-compat": "^3.16.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "bulma": "^0.4.2",
+    "preact": "8.1.0",
+    "preact-compat": "3.16.0",
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
   },
   "browserslist": [
     "> 0.5%",
