Add dist config optimizations and configure Bulma for dist

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "description": "A configuration boilerplate for a modern frontend SPA workflow.",
   "scripts": {
+    "clean": "rimraf build",
+    "lint": "eslint src",
     "build:dev": "webpack --env=dev --progress --colors",
-    "build:dist": "webpack -p --env=prod --progress --colors",
+    "build:dist": "npm run clean && webpack -p --env=prod --progress --colors",
     "serve:dev": "webpack-dev-server --env=dev --progress --colors",
     "serve:dist": "webpack-dev-server -p --env=prod --progress --colors",
-    "lint": "eslint src",
     "precommit": "eslint --max-warnings 0 src"
   },
   "keywords": [
@@ -17,6 +18,7 @@
     "postcss",
     "precss",
     "css modules",
+    "sass",
     "webpack",
     "babel",
     "eslint",
@@ -52,19 +54,20 @@
     "html-webpack-plugin": "2.29.0",
     "husky": "0.14.1",
     "image-webpack-loader": "3.3.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "4.5.3",
     "postcss": "6.0.4",
     "postcss-import": "10.0.0",
     "postcss-loader": "2.0.6",
     "precss": "2.0.0",
-    "sass-loader": "^6.0.6",
+    "rimraf": "2.6.1",
+    "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "webpack": "3.0.0",
     "webpack-dev-server": "2.5.0",
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
-    "bulma": "^0.4.2",
+    "bulma": "0.4.2",
     "preact": "8.1.0",
     "preact-compat": "3.16.0",
     "react": "15.6.1",
