--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
 sudo: enabled
 dist: trusty
+before_install:
+- nvm install 8.1.3
+- nvm use 8.1.3
 script: npm run build:dev && npm run build:dist
