--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modern-webapp",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A configuration boilerplate for a modern frontend SPA workflow.",
   "scripts": {
     "clean": "rimraf build",
@@ -34,44 +34,49 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "6.25.0",
+    "babel-core": "6.26.0",
     "babel-loader": "7.1.1",
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "browserslist": "2.1.5",
+    "browserslist": "2.3.3",
     "css-loader": "0.28.4",
     "cssnano": "3.10.0",
-    "eslint": "4.1.1",
+    "eslint": "4.4.1",
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-optimize-regex": "1.1.2",
-    "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "2.1.2",
+    "eslint-plugin-react": "7.2.1",
+    "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
-    "html-webpack-plugin": "2.29.0",
+    "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "image-webpack-loader": "3.3.1",
     "node-sass": "4.5.3",
-    "postcss": "6.0.6",
+    "postcss": "6.0.9",
     "postcss-import": "10.0.0",
     "postcss-loader": "2.0.6",
     "precss": "2.0.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1",
+    "webpack": "3.5.5",
+    "webpack-dev-server": "2.7.1",
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
-    "bulma": "0.4.3",
-    "preact": "8.1.0",
-    "preact-compat": "3.16.0",
+    "bulma": "0.5.1",
+    "history": "4.6.3",
+    "preact": "8.2.1",
+    "preact-compat": "3.17.0",
+    "prop-types": "15.5.10",
     "react": "15.6.1",
-    "react-dom": "15.6.1"
+    "react-dom": "15.6.1",
+    "react-redux": "5.0.5",
+    "react-router-redux": "5.0.0-alpha.6",
+    "redux": "3.7.2"
   },
   "browserslist": [
     "> 0.5%",
