--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "preact": "8.2.1",
     "preact-compat": "3.17.0",
     "prop-types": "15.5.10",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
+    "react": "16.0.0-beta.5",
+    "react-dom": "16.0.0-beta.5",
     "react-redux": "5.0.5",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.7.2"
