--- a/package.json
+++ b/package.json
@@ -36,44 +36,44 @@
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-loader": "7.1.1",
-    "babel-preset-env": "1.6.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "browserslist": "2.3.3",
-    "css-loader": "0.28.4",
+    "babel-preset-env": "7.0.0-beta.3",
+    "babel-preset-es2015": "7.0.0-beta.3",
+    "babel-preset-react": "7.0.0-beta.3",
+    "browserslist": "2.5.1",
+    "css-loader": "0.28.7",
     "cssnano": "3.10.0",
-    "eslint": "4.4.1",
+    "eslint": "4.9.0",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-import": "2.8.0",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-optimize-regex": "1.1.2",
-    "eslint-plugin-react": "7.2.1",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.1",
+    "file-loader": "1.1.5",
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
-    "image-webpack-loader": "3.3.1",
+    "image-webpack-loader": "3.4.2",
     "node-sass": "4.5.3",
-    "postcss": "6.0.9",
-    "postcss-import": "10.0.0",
-    "postcss-loader": "2.0.6",
+    "postcss": "6.0.13",
+    "postcss-import": "11.0.0",
+    "postcss-loader": "2.0.8",
     "precss": "2.0.0",
-    "rimraf": "2.6.1",
+    "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
-    "webpack": "3.5.5",
-    "webpack-dev-server": "2.7.1",
+    "style-loader": "0.19.0",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.3",
     "webpack-merge": "4.1.0"
   },
   "dependencies": {
-    "bulma": "0.5.1",
-    "history": "4.6.3",
-    "preact": "8.2.1",
+    "bulma": "0.6.0",
+    "history": "4.7.2",
+    "preact": "8.2.6",
     "preact-compat": "3.17.0",
-    "prop-types": "15.5.10",
-    "react": "16.0.0-beta.5",
-    "react-dom": "16.0.0-beta.5",
+    "prop-types": "15.6.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-redux": "5.0.5",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.7.2"
