Update dependencies and CI Node version

--- a/package.json
+++ b/package.json
@@ -34,25 +34,25 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.1",
+    "babel-core": "7.0.0-beta.3",
+    "babel-loader": "7.1.2",
     "babel-preset-env": "7.0.0-beta.3",
     "babel-preset-es2015": "7.0.0-beta.3",
     "babel-preset-react": "7.0.0-beta.3",
     "browserslist": "2.5.1",
     "css-loader": "0.28.7",
-    "cssnano": "3.10.0",
+    "cssnano": "4.0.0-rc.2",
     "eslint": "4.9.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-optimize-regex": "1.1.2",
+    "eslint-plugin-optimize-regex": "1.1.4",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.1",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.30.1",
-    "husky": "0.14.3",
+    "husky": "0.15.0-beta.10",
     "image-webpack-loader": "3.4.2",
     "node-sass": "4.5.3",
     "postcss": "6.0.13",
