--- a/package.json
+++ b/package.json
@@ -34,48 +34,49 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "7.0.0-beta.3",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.0.2",
     "babel-loader": "7.1.2",
-    "babel-preset-env": "7.0.0-beta.3",
-    "babel-preset-es2015": "7.0.0-beta.3",
-    "babel-preset-react": "7.0.0-beta.3",
-    "browserslist": "2.5.1",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "browserslist": "2.9.1",
     "css-loader": "0.28.7",
-    "cssnano": "4.0.0-rc.2",
-    "eslint": "4.9.0",
+    "cssnano": "3.10.0",
+    "eslint": "4.12.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-json": "1.2.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-optimize-regex": "1.1.4",
-    "eslint-plugin-react": "7.4.0",
-    "extract-text-webpack-plugin": "3.0.1",
+    "eslint-plugin-react": "7.5.1",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.30.1",
-    "husky": "0.15.0-beta.10",
+    "husky": "0.14.3",
     "image-webpack-loader": "3.4.2",
-    "node-sass": "4.5.3",
-    "postcss": "6.0.13",
+    "node-sass": "4.7.2",
+    "postcss": "6.0.14",
     "postcss-import": "11.0.0",
-    "postcss-loader": "2.0.8",
+    "postcss-loader": "2.0.9",
     "precss": "2.0.0",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.3",
-    "webpack-merge": "4.1.0"
+    "webpack-dev-server": "2.7.1",
+    "webpack-merge": "4.1.1"
   },
   "dependencies": {
-    "bulma": "0.6.0",
+    "bulma": "0.6.1",
     "history": "4.7.2",
     "preact": "8.2.6",
     "preact-compat": "3.17.0",
     "prop-types": "15.6.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "5.0.5",
-    "react-router-redux": "5.0.0-alpha.6",
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
+    "react-redux": "5.0.6",
+    "react-router-redux": "4.0.8",
     "redux": "3.7.2"
   },
   "browserslist": [
